--- a/app/ui/LessonActivity/LessonActivity.html
+++ b/app/ui/LessonActivity/LessonActivity.html
@@ -12,12 +12,17 @@
 </nav>
 
 <main>
-    <section class="MainLayout">
+    <section class="MainLayout" style
+    ="padding: 32px; box-sizing: border-box">
 
         <div class="TitleBlack landingToolbarTitle" style="margin-left: 0;display: flex; justify-content: center; margin-top: 24px;">
             Lesson 1
         </div>
 
+        <div class="TextDark" style="margin-top: 32px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget lorem nec eros bibendum ultrices. Integer auctor mattis nibh, ac sollicitudin augue bibendum in. Integer porttitor sem dignissim tellus consectetur, vitae pellentesque arcu gravida. Proin congue, orci id iaculis ullamcorper, tellus sapien semper augue, lobortis ullamcorper metus nisi ut lacus. Fusce vehicula fringilla accumsan. Nullam at purus ex. Vivamus scelerisque volutpat massa, ut ullamcorper diam lacinia vitae. Phasellus a mi vehicula, molestie velit a, sodales ante. Nunc vel molestie tortor, egestas bibendum quam. Mauris non elementum mi. Proin at molestie sem. Aliquam placerat bibendum lectus pharetra malesuada. Praesent vitae ultrices mi. Suspendisse nibh eros, fermentum quis euismod id, blandit id purus.
+        </div>
+
+        <input class="Input">
     </section>
 </main>
 
